--- a/EnergyUbication/res/values-es/strings_activity_login.xml
+++ b/EnergyUbication/res/values-es/strings_activity_login.xml
@@ -11,7 +11,7 @@
     <string name="login_progress_signing_in">Iniciando sesión&#8230;</string>
     <string name="error_invalid_email">La dirección de email es incorrecta</string>
     <string name="error_invalid_password">La contraseña es demasiado corta</string>
-    <string name="error_incorrect_password">La contraseña es incorrecta</string>
+    <string name="error_incorrect_password">El usuario o la contraseña no son válidos</string>
     <string name="error_field_required">Este campo es obligatorio</string>
 
 </resources>
