--- a/EnergyUbication/res/values-es/strings_activity_login.xml
+++ b/EnergyUbication/res/values-es/strings_activity_login.xml
@@ -1,11 +1,11 @@
 <resources>
 
-    <string name="title_activity_login">Iniciar Sesión</string>
+    <string name="title_activity_login">Energy Ubication</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Contraseña</string>
-    <string name="action_sign_in_register"><b>Iniciar Sesión</b> o registrarse</string>
+    <string name="action_sign_in_register"><b>Iniciar Sesión</b></string>
     <string name="action_sign_in_short">Iniciar Sesión</string>
     <string name="action_forgot_password">Recuperar contraseña</string>
     <string name="login_progress_signing_in">Iniciando sesión&#8230;</string>
